[package]
name = "main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.32", features = ["derive"]}
git2 = "0.15.0"
rayon = "1.6.1"
tmux_interface = "0.2.1"
